<resources>
    <string name="app_name">Text Counter</string>
    <string name="chars_selection">Chars</string>
    <string name="words_selection">Words</string>
    <string name="empty_input_warning">Please enter some text</string>
    <string name="result_chars">Character count: %1$d</string>
    <string name="result_words">Word count: %1$d</string>

    <string-array name="count_options">
        <item>Chars</item>
        <item>Words</item>
    </string-array>
</resources>
